@@ -2,8 +2,10 @@ NextGEN Gallery
 by Alex Rabe & NextGEN DEV Team
 
 V0.93
+- Added : Select Full-Size or Singlepic in Media Upload
 - Added : Check for minimum 8 MB Memory
 - Changed : Priority from wpautop must be before gallery
+- Bugfix : Clean CSS class in setup.php
 - Bugfix : Change PHP short tag (Thx to Archedition)
 - Bugfix : Remove tab.png from CSS (Thx to Frisco)
 - Bugfix : Remove newline and encode quotes in Media-Upload (THX to Trip Mellinger)
